# challenge-leaderboard

./: teams.yml
repro/team_fabinalii/: .gitignore  MANIFEST.md  README.md  build_zip.sh  pyproject.toml  requirements.txt  team_fabinalii_submit.py
repro/team_fabinalii/data/interim/: energy_load_snapshot.parquet  weather_snapshot.parquet
repro/team_fabinalii/expected/: 2026-06-27_reference.csv  SHA256SUMS
scripts/: score_day.py
submissions/team_4/: 2026-05-31.csv  2026-06-02.csv
submissions/team_fabinalii/: DEVLOG.md  LICENSE  MODEL_CARD.md
tests/: test_workflows_yaml.py
